force-app/src-corecrm/main/default/objects/Account/fields/CI_Demo__c.field-meta.xml
<CustomField>
    <fullName>CI_Demo__c</fullName>
    <label>CI Demo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>