force-app/src-corecrm/main/default/objects/Account/fields/CI_Test__c.field-meta.xml
<CustomField>
    <fullName>CI_Test__c</fullName>
    <label>CI Test</label>
    <length>20</length>
    <type>Text</type>
</CustomField>