force-app/src-corecrm/main/default/objects/Account/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <description>Short name for the account</description>
    <label>Short Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>