force-app/src-corecrm/main/default/objects/Account/fields/SimpleAddition__c.field-meta.xml
<CustomField>
    <fullName>SimpleAddition__c</fullName>
    <description>Simple Addition</description>
    <formula>1 + 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SimpleAddition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>