force-app/src-corecrm/main/default/objects/Account/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <description>Added description</description>
    <label>SLA</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>