force-app/src-corecrm/main/default/objects/Account/fields/Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Field__c</fullName>
    <description>Test</description>
    <label>Test Field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>